external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_struct_explicit_type_args.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E02010]: invalid name
   ┌─ tests/move_2024/parser/positional_struct_explicit_type_args.move:11:13
   │
11 │         let Foo <u64>(_) = Foo(0);
   │             ^^^ Invalid local name 'Foo'. Local variable names must start with 'a'..'z', '_', or be a valid name quoted with backticks (`name`)

error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/positional_struct_explicit_type_args.move:11:17
   │
11 │         let Foo <u64>(_) = Foo(0);
   │                 ^
   │                 │
   │                 Unexpected '<'
   │                 Expected ';'

error[E02010]: invalid name
   ┌─ tests/move_2024/parser/positional_struct_explicit_type_args.move:12:13
   │
12 │         let Bar <u64>{x: _ } = Bar{ x: 0 };
   │             ^^^ Invalid local name 'Bar'. Local variable names must start with 'a'..'z', '_', or be a valid name quoted with backticks (`name`)

error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/positional_struct_explicit_type_args.move:12:17
   │
12 │         let Bar <u64>{x: _ } = Bar{ x: 0 };
   │                 ^
   │                 │
   │                 Unexpected '<'
   │                 Expected ';'

error[E03022]: invalid usage position
   ┌─ tests/move_2024/parser/positional_struct_explicit_type_args.move:16:17
   │
16 │         let _ = Foo <u64>(0u64);
   │                 ^^^ Expected a local or constant, but found struct 'Foo' in current scope
   │
   = Structs with positional arguments must be written as 'Foo<T>( ... )'

error[E04003]: built-in operation not supported
   ┌─ tests/move_2024/parser/positional_struct_explicit_type_args.move:16:17
   │
16 │         let _ = Foo <u64>(0u64);
   │                 ^^^^^^^^
   │                 │
   │                 Invalid argument to '>'
   │                 Found: 'bool'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E03009]: unbound variable
   ┌─ tests/move_2024/parser/positional_struct_explicit_type_args.move:16:22
   │
16 │         let _ = Foo <u64>(0u64);
   │                      ^^^ Unbound variable 'u64'

error[E04007]: incompatible types
   ┌─ tests/move_2024/parser/positional_struct_explicit_type_args.move:16:25
   │
16 │         let _ = Foo <u64>(0u64);
   │                 --------^ ---- Found: 'u64'. It is not compatible with the other type.
   │                 │       │  
   │                 │       Incompatible arguments to '>'
   │                 Found: 'bool'. It is not compatible with the other type.

error[E04003]: built-in operation not supported
   ┌─ tests/move_2024/parser/positional_struct_explicit_type_args.move:16:27
   │
16 │         let _ = Foo <u64>(0u64);
   │                 --------  ^^^^ Invalid argument to '>'
   │                 │          
   │                 Found: 'bool'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'
